<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Parse Starter Project</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rider">Map</string>
    <string name="title_activity_driver_location">Map</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="or_login">Or, Login</string>
    <string name="login">Login</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="your_are_successfully_sign_up">You are successfully sign up!</string>
    <string name="user_with_such_user_name_are_already_registered">User with such username are already registered</string>
    <string name="login_failed">Login failed</string>
    <string name="your_are_successfully_loged_in">Your are successfully loged in</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="image_successfully_shared">Image successfully shared!</string>
    <string name="image_could_not_be_shared">Image could not be shared -please try again later.</string>
</resources>
